add crud for User

--- a/.env.example
+++ b/.env.example
@@ -11,4 +11,4 @@ TYPEORM_PASSWORD =
 TYPEORM_DATABASE =
 TYPEORM_SYNCHRONIZE = false
 TYPEORM_LOGGING = true
-TYPEORM_ENTITIES = src/entity/**
+TYPEORM_ENTITIES = src/**/entity/**
