--- a/ormconfig.json
+++ b/ormconfig.json
@@ -8,19 +8,8 @@
   "synchronize": true,
   "logging": true,
   "entities": [
-    "src/entity/**/*.ts"
+    "src/**/entity/**/*.ts"
   ],
-  "migrations": [
-    "src/migration/**/*.ts"
-  ],
-  "subscribers": [
-    "src/subscriber/**/*.ts"
-  ],
-  "cli": {
-    "entitiesDir": "src/entity",
-    "migrationsDir": "src/migration",
-    "subscribersDir": "src/subscriber"
-  },
   "extra": {
     "useNewUrlParser": true
   }
