--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "starter-server-nest",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "It's a starter framework on Nest, with TypeScript support.",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
@@ -24,6 +24,7 @@
     "@nestjs/core": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.0.0",
+    "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "dotenv": "^7.0.0",
     "express-rate-limit": "^3.4.0",
