add the JWToken

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
 #App Setting
-NODE_ENV=development
-PORT=3000
+NODE_ENV = development
+EXPIRES_IN = 3600
+PORT = 3000
 
 #Config TypeOrm
 TYPEORM_CONNECTION = mysql
