--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
   "dependencies": {
     "@nestjs/common": "^6.0.0",
     "@nestjs/core": "^6.0.0",
+    "@nestjs/jwt": "^6.0.0",
+    "@nestjs/passport": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.0.0",
     "class-transformer": "^0.2.0",
@@ -30,6 +32,8 @@
     "express-rate-limit": "^3.4.0",
     "helmet": "^3.16.0",
     "mysql": "^2.16.0",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.12",
     "rimraf": "^2.6.2",
     "rxjs": "^6.3.3",
@@ -39,7 +43,10 @@
     "@nestjs/testing": "^6.0.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.11",
+    "@types/jsonwebtoken": "^8.3.2",
     "@types/node": "^11.11.5",
+    "@types/passport": "^1.0.0",
+    "@types/passport-jwt": "^3.0.1",
     "@types/supertest": "^2.0.7",
     "jest": "^24.5.0",
     "nodemon": "^1.18.9",
