--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "starter-server-nest",
-  "version": "0.0.4",
-  "description": "It's a starter framework on Nest, with TypeScript support.",
+  "version": "0.0.5",
+  "description": "It's a starter framework on Nest, with TypeScript support. Middleware JWT.",
   "scripts": {
     "build": "tsc -p tsconfig.build.json",
     "start": "ts-node -r tsconfig-paths/register src/main.ts",
@@ -26,6 +26,7 @@
     "@nestjs/passport": "^6.0.0",
     "@nestjs/platform-express": "^6.0.0",
     "@nestjs/typeorm": "^6.0.0",
+    "bcrypt": "^3.0.5",
     "class-transformer": "^0.2.0",
     "class-validator": "^0.9.1",
     "dotenv": "^7.0.0",
@@ -41,6 +42,7 @@
   },
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
+    "@types/bcrypt": "^3.0.0",
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.11",
     "@types/jsonwebtoken": "^8.3.2",
