--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
   "devDependencies": {
     "@nestjs/testing": "^6.0.0",
     "@types/bcrypt": "^3.0.0",
+    "@types/dotenv": "^6.1.1",
     "@types/express": "^4.16.0",
     "@types/jest": "^24.0.11",
     "@types/jsonwebtoken": "^8.3.2",
